modulith exports fix